force-app/main/default/objects/Subscription_Industry__c/Subscription_Industry__c.object-meta.xml
<CustomObject>
    <label>Subscription Industry</label>
    <nameField>
        <displayFormat>SUB-IND{00000}</displayFormat>
        <label>Subscription Industry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>