force-app/main/default/objects/Subscription_Industry__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Subscription Industries</relationshipLabel>
    <relationshipName>Subscription_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>