force-app/main/default/objects/Subscription_Industry__c/fields/Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Name__c</fullName>
    <formula>Industry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Name</label>
    <type>Text</type>
</CustomField>