force-app/main/default/objects/Subscription_Industry__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>HL_Subscription__c</referenceTo>
    <relationshipLabel>Industry Groups</relationshipLabel>
    <relationshipName>Subscription_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>